# websocket_p21

./: Makefile  pyproject.toml
apps/: urls.py
root/: asgi.py  settings.py  urls.py
