[tool.poetry]
name = "websocket-p21"
version = "0.1.0"
description = ""
authors = ["behruzgithub"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
channels = "^4.1.0"
channels-redis = "^4.2.0"
daphne = "^4.1.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
